--- a/azure-pipelines-release.yml
+++ b/azure-pipelines-release.yml
@@ -21,7 +21,11 @@ variables:
     value: $[variables.datacore]
 
 trigger:
-  - release/v?.?.?
+  branches:
+    include:
+      - release/v?.?.?
+      - task/#2555_pipeline_task_by_mike
+
 # build agent pool default가 dtonic꺼
 # see: https://dev.azure.com/dtonic/_settings/agentpools
 pool:
