env: Update azure-pipelines-release.yml file
- Update build agent pool in *.yml file

--- a/azure-pipelines-release.yml
+++ b/azure-pipelines-release.yml
@@ -29,7 +29,7 @@ trigger:
 # build agent pool default가 dtonic꺼
 # see: https://dev.azure.com/dtonic/_settings/agentpools
 pool:
-  name: default
+  name: Azure Pipelines
 # develop branch build
 stages:
   - stage: AdvancedDevelopIngestManagerService
